# Olio-ohjelmointi

./: README.md
H1/: funktiot.cpp  funktiot.h  main.cpp
H4/: CMakeLists.txt  car.cpp  car.h  engine.cpp  engine.h  main.cpp  wheel.cpp  wheel.h
H5/: CMakeLists.txt  a1.cpp  a1.h  a2.cpp  a2.h  b.cpp  b.h  main.cpp
h3a/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
h3b/: animal.h  dog.h  main.cpp
h7/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
